--- a/build.gradle
+++ b/build.gradle
@@ -1,59 +1,48 @@
-//plugins {
-//    id "java"
-//    id "org.springframework.boot" version "1.5.8.RELEASE"
-//}
-//
-//repositories {
-//    //mavenCentral()
-//    maven {
-//        url "http://repo1.maven.org/"
-//    }
-//}
-//
-//dependencies {
-//    compile("org.springframework.boot:spring-boot-starter-web")
-//}
+import org.flywaydb.gradle.task.FlywayMigrateTask
 
-
-//-------------------------------------------------------------------------------
-
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.4.RELEASE")
-    }
+plugins {
+    id "java"
+    id "org.springframework.boot" version "1.5.4.RELEASE"
+    id "org.flywaydb.flyway" version "4.2.0"
 }
-
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
 
 repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    // tag::actuator[]
-    //compile("org.springframework.boot:spring-boot-starter-actuator")
-    // end::actuator[]
-    // tag::tests[]
-    testCompile("org.springframework.boot:spring-boot-starter-test")
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
-    // end::tests[]
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
+//    compile("org.springframework.boot:spring-boot-starter-actuator")
+//    compile("org.springframework.boot:spring-boot-starter-security")
+
+    compile("mysql:mysql-connector-java:6.0.6")
+
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
+def developmentDbUrl = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 bootRun.environment([
         "WELCOME_MESSAGE": "hello",
+        "SPRING_DATASOURCE_URL": developmentDbUrl,
+        "MANAGEMENT_SECURITY_ENABLED": false,
 ])
 
+def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
+        "SPRING_DATASOURCE_URL": testDbUrl,
+        "MANAGEMENT_SECURITY_ENABLED": false,
 ])
+
+flyway {
+    url = developmentDbUrl
+    user = "tracker"
+    password = ""
+    locations = ["filesystem:databases/tracker/migrations"]
+}
+
+task testMigrate(type: FlywayMigrateTask) {
+    url = testDbUrl
+}
